--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,40 @@ body {
     color: white;
 }
 
+/* Contador de dias e horas */
+
+#countdown_dashboard .dashp {
+  border:5px solid #000;
+  float:left;
+  margin: 0px 10px 0px 0px;
+  width: 140px;
+  height: 120px;
+  padding:5px;
+  border-radius: 15px;
+}
+#countdown_dashboard p {
+  font-size:40px;
+  font-weight:bold;
+  color:#dde04e;
+  margin: 10px;
+  text-align: center;
+  background-color: #000;
+}
+#countdown_dashboard .dashtitle {
+  font-size:30px;
+  color:rgb(240, 17, 17);
+  clear:both;
+  display:block;
+}
+/* Fim Contador de dias e horas */
+
 .section-container{
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .background-section-one{
@@ -35,6 +63,20 @@ body {
     background-repeat: no-repeat;
 }
 
+.tema{
+  color:#ff0;
+  justify-content: flex-start;
+  padding: 30px;
+  border-radius: 80px;
+  background: #000;
+  font-size: 30px;
+  /* font-weight: lighter; */
+  /* display: inline-block; */
+  /* border: 1px solid #2014cc; */
+  /* background: linear-gradient(to bottom, #d5aac8 5%, #679e95  100%); */
+  /* box-shadow:inset 0px 1px 0px 0px #cf6dc7; */
+  /* text-shadow:0px 1px 0px #800970; */
+}
 
 .card-container{
     background: #ff8080;
@@ -56,6 +98,7 @@ input {
     color: #000;
     /* background-color: #4d00; */
     font-weight: bold;
+
 }
 
 /* 
@@ -70,6 +113,8 @@ form {
      color: #fff;
  }
 
+ /*Rodapé */ 
+
 footer { 
     display: flex;
     align-items: center;
@@ -83,6 +128,10 @@ footer {
 .footer-link{
     color: #fff;
 }
+
+/*Fim do Rodapé */
+
+/*Resonsividade*/
 
 @media (max-width: 496px) {
     .logo img {
@@ -116,3 +165,4 @@ footer {
  #main { min-width: 1000px; }
 }
 
+/* Fim Responsividade */
